/* 
  Localizable.strings
  VoxeetConferenceKitSample

  Created by Corentin Larroque on 10/31/18.
  Copyright © 2018 Voxeet. All rights reserved.
*/

LANGUAGE = "English";

CONFERENCE_NAME_LABEL = "Conference name";
CONFERENCE_NAME_PLACEHOLDER = "Conference name";
PARTICIPANTS_LIST_LABEL = "Select a user";
LOGOUT_BUTTON_TITLE = "Logout";
START_BUTTON_TITLE = "Join call";

VT_NOTIFICATION_TITLE = "Incoming call from _HANDLE_";
VT_NOTIFICATION_BODY = "Conference: _CONFERENCE_ALIAS_";
VT_NOTIFICATION_ANSWER = "Answer";
VT_NOTIFICATION_DECLINE = "Decline";

VTUX_CONFERENCE_STATE_CALLING = "We're waiting for other callers to arrive.";
VTUX_CONFERENCE_STATE_ENDED = "Call has ended.";
VTUX_CONFERENCE_STATE_DECLINED = "Declined call.";

VTUX_MICROPHONE_ALERT_TITLE = "Microphone permission";
VTUX_MICROPHONE_ALERT_MESSAGE = "Microphone permission is required in order to communicate with other people";
VTUX_MICROPHONE_ALERT_BUTTON_CANCEL = "Cancel";
VTUX_MICROPHONE_ALERT_BUTTON_SETTINGS = "Settings";

VTUX_CAMERA_ALERT_TITLE = "Camera permission";
VTUX_CAMERA_ALERT_MESSAGE = "Camera permission is required to activate the video";
VTUX_CAMERA_ALERT_BUTTON_CANCEL = "Cancel";
VTUX_CAMERA_ALERT_BUTTON_SETTINGS = "Settings";
