...
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QwX-rF-kVC">
                                                        <rect key="frame" x="186" y="0.0" width="50" height="50"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="QwX-rF-kVC" secondAttribute="height" multiplier="1:1" id="NHS-9w-oLN"/>
                                                        </constraints>
                                                        <state key="normal" image="Hangup"/>
                                                        <connections>
                                                            <action selector="hangUpAction:" destination="vX9-VW-Q3b" eventType="touchUpInside" id="Kul-WX-g7P"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                                <constraints>
...
